--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-
+spring.application.name=ms-bestbanco-instrumentos
+server.port=8088
+#mongo-local-conn
+spring.data.mongodb.uri=mongodb://superAdmin:pass1234@192.168.1.99:27017/?authSource=admin
+spring.data.mongodb.database=dbbestbank
+#productos
+app.productosUrl=http://localhost:8086/v1/productos/%s
+#clientes
+app.clientesUrl=http://localhost:8085/v1/clientes/%s
+#productos
+app.productoRolUrl=http://localhost:8086/v1/productos/%s/personas
