--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 spring.application.name=ms-bestbanco-instrumentos
 server.port=8088
+spring.jackson.time-zone=America/Lima
 #mongo-local-conn
 spring.data.mongodb.uri=mongodb://superAdmin:pass1234@192.168.1.99:27017/?authSource=admin
 spring.data.mongodb.database=dbbestbank
+#TimeZone
+app.timeZone=America/Lima
 #productos
 app.productosUrl=http://localhost:8086/v1/productos/%s
 #clientes
