--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,18 @@
-spring.application.name=ms-bestbanco-instrumentos
-server.port=8088
-#Zona Horaria
-spring.jackson.time-zone=America/Lima
-#mongo-local-conn
-spring.data.mongodb.uri=mongodb://superAdmin:pass1234@192.168.1.99:27017/?authSource=admin
-spring.data.mongodb.database=dbbestbank
-#TimeZone
-app.timeZone=America/Lima
-#productos
-app.productosUrl=http://localhost:8086/v1/productos/%s
-#clientes
-app.clientesUrl=http://localhost:8085/v1/clientes/%s
-#productos
-app.productoRolUrl=http://localhost:8086/v1/productos/%s/personas
+spring.application.name=ms-bestbank-instrumentos
+#server.port=8088
+##Zona Horaria
+#spring.jackson.time-zone=America/Lima
+##mongo-local-conn
+#spring.data.mongodb.uri=mongodb://superAdmin:pass1234@192.168.1.99:27017/?authSource=admin
+#spring.data.mongodb.database=dbbestbank
+##TimeZone
+#app.timeZone=America/Lima
+##productos
+#app.productosUrl=http://localhost:8086/v1/productos/%s
+##clientes
+#app.clientesUrl=http://localhost:8085/v1/clientes/%s
+##productos
+#app.productoRolUrl=http://localhost:8086/v1/productos/%s/personas
+#configuracion Server
+#spring.cloud.config.enabled=false
+spring.config.import=optional:configserver:http://localhost:8888/
