Correccion cliente WEB
Correccion Cliente WEB

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,13 @@
 spring.application.name=ms-bestbank-instrumentos
 server.port=8088
+#app.SimpleId
+app.simpleId="/%id"
+#productos
+app.productosUrl=http://ms-bestbank-productos/v1/productos
+#clientes
+app.clientesUrl=http://ms-bestbank-clientes/v1/clientes
+#productos
+#app.productoRolUrl=/%s/personas
 #Extra Config Eureka Client
 management.endpoints.web.base-path=/actuator/info
 eureka.instance.prefer-ip-address=true
