--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,19 @@
 spring.application.name=ms-bestbank-instrumentos
 server.port=8088
-#app.SimpleId
-app.simpleId="/%id"
-#productos
-app.productosUrl=http://ms-bestbank-productos/v1/productos
-#clientes
-app.clientesUrl=http://ms-bestbank-clientes/v1/clientes
-#productos
-#app.productoRolUrl=/%s/personas
 #Extra Config Eureka Client
 management.endpoints.web.base-path=/actuator/info
 eureka.instance.prefer-ip-address=true
-eureka.instance.hostname=LIM-43JD163.usersad.everis.int
+#eureka.instance.hostname=LIM-43JD163.usersad.everis.int
+eureka.instance.hostname=localhost
 #--------------------------
+#app.SimpleId
+app.simpleId=/%s
+#productos
+#app.productosUrl=http://ms-bestbank-productos/v1/productos
+app.productosUrl=http://loclahost:8086/v1/productos
+#clientes
+#app.clientesUrl=http://ms-bestbank-clientes/v1/clientes
+app.clientesUrl=http://localhost:8085/v1/clientes
+#productos
+#app.productoRolUrl=/%s/personas
 spring.config.import=optional:configserver:http://localhost:8888/
